--- a/package.json
+++ b/package.json
@@ -9,14 +9,23 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.8.4",
+    "bcryptjs": "^3.0.2",
+    "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "framer-motion": "^12.6.2",
+    "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.14.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.4.0",
     "react-scripts": "5.0.1",
+    "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "web-vitals": "^2.1.4"
   },
