--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "leaflet": "^1.9.4",
     "mysql": "^2.18.1",
     "mysql2": "^3.14.0",
+    "nodemailer": "^6.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
